--- a/src/views/LoginView.css
+++ b/src/views/LoginView.css
@@ -5,7 +5,7 @@
     margin: 80px;
 }
 
-form {
+.form {
     width: 300px;
     margin: 30px 0px 30px;
     padding: 30px;
@@ -13,7 +13,11 @@ form {
     padding-bottom: 70px;
 }
 
-input {
+input[type=text],
+input[type=email],
+input[type=password],
+input[type=submit],
+.login-button {
     width: 100%;
     height: 30px;
     border-radius: 3px;
@@ -25,10 +29,16 @@ input {
     background-color: #ddd;
 }
 
-input[type=submit] {
+input[type=submit],
+.login-button {
     background-color: red;
-    color: rgb(255, 255, 255);
+    color: white;
     border: none;
     cursor: pointer;
-    margin: 0;
+    margin: 20px 0;
+}
+
+.genre-checkbox {
+    display: flex;
+    margin: 10px;
 }
